--- a/webroot/index.html
+++ b/webroot/index.html
@@ -3,9 +3,30 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Calvin and Hobbes</title>
+        <title>Calvin and Hobbes in Space</title>
         <meta name="description" content="">
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+        <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+        <!-- Twitter Card data -->
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="Calvin and Hobbes in Space">
+        <meta name="twitter:description" content="">
+        <meta name="twitter:creator" content="@jacobclarke92">
+        <meta name="twitter:image" content="assets/original.jpg">
+
+        <!-- Open Graph data -->
+        <meta property="og:title" content="Calvin and Hobbes in Space" />
+        <meta property="og:type" content="article" />
+        <meta property="og:url" content="" />
+        <meta property="og:image" content="assets/original.jpg" />
+        <meta property="og:description" content="" /> 
+        <meta property="og:site_name" content="" />
     </head>
     <body>
         <main id="main">
