--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Open Graph data -->
         <meta property="og:title" content="Calvin and Hobbes in Space" />
         <meta property="og:type" content="article" />
-        <meta property="og:url" content="" />
+        <meta property="og:url" content="https://jacobclarke92.github.io/calvin-and-hobbes-universe/" />
         <meta property="og:image" content="https://jacobclarke92.github.io/calvin-and-hobbes-universe/assets/original.jpg" />
         <meta property="og:description" content="" /> 
         <meta property="og:site_name" content="" />
