--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Calvin and Hobbes in Space</title>
-        <meta name="description" content="">
+        <meta name="description" content="A homage to my favourite comic and all that is cosmic, by Jacob Clarke">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
@@ -16,7 +16,7 @@
         <!-- Twitter Card data -->
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Calvin and Hobbes in Space">
-        <meta name="twitter:description" content="">
+        <meta name="twitter:description" content="A homage to my favourite comic and all that is cosmic, by Jacob Clarke">
         <meta name="twitter:creator" content="@jacobclarke92">
         <meta name="twitter:image" content="https://jacobclarke92.github.io/calvin-and-hobbes-universe/assets/original.jpg">
 
@@ -25,8 +25,8 @@
         <meta property="og:type" content="article" />
         <meta property="og:url" content="https://jacobclarke92.github.io/calvin-and-hobbes-universe/" />
         <meta property="og:image" content="https://jacobclarke92.github.io/calvin-and-hobbes-universe/assets/original.jpg" />
-        <meta property="og:description" content="" /> 
-        <meta property="og:site_name" content="" />
+        <meta property="og:description" content="A homage to my favourite comic and all that is cosmic, by Jacob Clarke" /> 
+        <meta property="og:site_name" content="Jacob Clarke" />
     </head>
     <body>
         <main id="main">
