--- a/index.html
+++ b/index.html
@@ -29,15 +29,13 @@
         <meta property="og:site_name" content="Jacob Clarke" />
     </head>
     <body>
-        <main id="main">
-            <div id="background"></div>
-            <div id="foreground"></div>
-            <div id="overlay"></div>
-        </main>
         <style type="text/css">
         
             body {
-                background-color: #010006;   
+                background-color: #010006;
+                font-family: Helvetica, Arial, sans-serif;
+                font-size: 12px;
+                line-height: 24px;
             }
 
             #main,
@@ -78,7 +76,64 @@
                 background-size: 100% auto;
             }
 
+            #nav {
+                position: fixed;
+                top: 1rem;
+                right: 1rem;
+            }
+
+            #nav a {
+                cursor: pointer;
+                display: inline-block;
+                height: 24px;
+                vertical-align: middle;
+                color: #444444;
+                text-decoration: none;
+                margin: 0.2rem;
+                transition: color 0.5s ease-out;
+                -webkit-transition: color 0.5s ease-out;
+            }
+
+            #nav a:hover,
+            #nav a:active {
+                color: #ffffff;
+            }
+
         </style>
+        <svg viewBox="0 0 24 24" version = "1.1">
+            <defs>
+                <g x="0" y="0" id="fullscreen">
+                    <path d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z" fill="currentColor" />
+                </g>
+                <g x="0" y="0" id="fullscreen-exit">
+                    <path d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M5 16h3v3h2v-5H5v2zm3-8H5v2h5V5H8v3zm6 11h2v-3h3v-2h-5v5zm2-11V5h-2v5h5V8h-3z" fill="currentColor" />
+                </g>
+                <g x="0" y="0" id="sound">
+                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z" fill="currentColor" />
+                    <path d="M0 0h24v24H0z" fill="none"/>
+                </g>
+                <g x="0" y="0" id="mute">
+                    <path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z" fill="currentColor" />
+                    <path d="M0 0h24v24H0z" fill="none"/>
+                </g>
+            </defs>
+        </svg>
+        <main id="main">
+            <div id="background"></div>
+            <div id="foreground"></div>
+            <div id="overlay"></div>
+        </main>
+        <nav id="nav">
+            <a href="https://instagram.com/jekkib/" target="_blank">by Jacob Clarke</a>
+            <a id="audio-toggle">
+                <svg viewBox="0 0 24 24" version="1.1" width="24" height="24"><use x="0" y="0" xlink:href="#sound" /></use>
+            </svg>
+            <a id="fullscreen-toggle">
+                <svg viewBox="0 0 24 24" version="1.1" width="24" height="24"><use x="0" y="0" xlink:href="#fullscreen" /></use>
+            </svg>
+        </nav>
         <script type="text/javascript" src="dist/scripts.js"></script>
     </body>
 </html>
